WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219678
Font loads are triggered too late
https://bugs.webkit.org/show_bug.cgi?id=219678
Summary
Font loads are triggered too late
Antti Koivisto
Reported
2020-12-09 05:44:49 PST
CSSFontSelector triggers font loads on zero duration timer after style resolution. This can get delayed substantially and all sorts of less important loads may go out first.
Attachments
wip
(2.70 KB, patch)
2020-12-09 06:41 PST
,
Antti Koivisto
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
patch
(6.98 KB, patch)
2020-12-09 09:09 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-12-09 06:41:10 PST
Created
attachment 415751
[details]
wip
Antti Koivisto
Comment 2
2020-12-09 09:09:32 PST
Created
attachment 415766
[details]
patch
Geoffrey Garen
Comment 3
2020-12-09 11:07:58 PST
Comment on
attachment 415766
[details]
patch r=me
EWS
Comment 4
2020-12-09 11:30:35 PST
Committed
r270590
: <
https://trac.webkit.org/changeset/270590
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 415766
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug