Font loads are triggered too late https://bugs.webkit.org/show_bug.cgi?id=219678

Reviewed by Geoffrey Garen.

Source/WebCore:

CSSFontSelector triggers font loads on zero duration timer after style resolution.
This can get delayed substantially and all sorts of less important loads (for example
CSS images triggered during render tree building) may go out first.

* css/CSSFontSelector.cpp:
(WebCore::CSSFontSelector::beginLoadingFontSoon):
(WebCore::CSSFontSelector::loadPendingFonts):

Factor the actual load triggering into a function.

(WebCore::CSSFontSelector::fontLoadingTimerFired):

Timer still takes care of the checkLoadComplete.

(WebCore::CSSFontSelector::suspend):
(WebCore::CSSFontSelector::resume):
* css/CSSFontSelector.h:
* dom/Document.cpp:
(WebCore::Document::resolveStyle):

Trigger font loads right after style resolution, before render tree building.

LayoutTests:

* fast/text/web-font-load-fallback-during-loading-no-multiple-expected.txt:


Canonical link: https://commits.webkit.org/232261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270590 268f45cc-cd09-0410-ab3c-d52691b4dbfc